--- a/posts.html
+++ b/posts.html
@@ -7,7 +7,7 @@ title: "Posts"
   <ul class="listing">
     {% for post in site.posts %}
     <li>
-      <span>{{ post.date | date: "%B %e, %Y" }}</span> <a href="{{ post.url }}">{{ post.title }}</a>
+      <span>by {{ post.author }}, {{ post.date | date: "%B %e, %Y" }}</span> <a href="{{ post.url }}">{{ post.title }}</a>
     </li>
     {% endfor %}
   </ul>
