changed one link

--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@ title: "About"
 
 	<p>Ian Zapolsky is originally from Seattle, WA and is currently studying
 	abroad in Buenos Aires, Argentina. He can also be found at
-	 <a href="http://www.ianzapolsky.com">ianzapolsky.com</a> or his 
+	 <a href="http://ianzapolsky.com">ianzapolsky.com</a> or his 
 	 <a href="https://github.com/ianzapolsky">personal github page</a>.</p>
   </section>
 
