changed date representation

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ title: "Home"
 	</h1>
 	
 	<section class="byline">
-	  by {{ post.author }}, {{ post.date | date: "%b %e, %Y" }}
+	  by {{ post.author }}, {{ post.date | date: "%B %e, %Y" }}
 	</section>
 
 	<p>{{ post.content }}</p>
