--- a/posts.html
+++ b/posts.html
@@ -8,7 +8,7 @@ title: "Posts"
     {% for post in site.posts %}
     <li>
       <!-- changed date from "%B %e, %Y" -->
-      <span>by {{ post.author }}, {{ post.date | date: "%m %e, %Y" }}</span> <a href="{{ post.url }}">{{ post.title }}</a>
+      <span>by {{ post.author }}, {{ post.date | date: "%m/%d/%Y" }}</span> <a href="{{ post.url }}">{{ post.title }}</a>
     </li>
     {% endfor %}
   </ul>
