--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: "Home"
 ---
 
 <section class="content">
-  {% for post in site.posts %}
+  {% for post in paginator.posts %}
 	<h1>
 	  <a href="{{ post.url }}">{{ post.title }}</a>
 	</h1>
@@ -13,9 +13,29 @@ title: "Home"
 	  by {{ post.author }}, {{ post.date | date: "%B %e, %Y" }}
 	</section>
 
-	<p>{{ post.content }}</p>
+    <p>{{ post.excerpt }}</p>
+    <p style="text-align:center;"><a href="{{ post.url }}">read more...</a></p>
 
 	<hr>
 
   {% endfor %}
+
+  <div style="text-align:center;" class="pagination">
+    {% if paginator.previous_page %}
+      {% if paginator.previous_page == 1 %}
+        <a href="/index.html" class="previous">&laquo; previous</a>
+      {% else %}
+      <a href="/page{{ paginator.previous_page }}" class="previous">&laquo; previous</a>
+      {% endif %}
+    {% else %}
+      <span class="previous">previous</span>
+    {% endif %}
+    <span class="page_number ">| page {{ paginator.page }} of {{ paginator.total_pages }} |</span>
+    {% if paginator.next_page %}
+      <a href="/page{{ paginator.next_page }}" class="next">next &raquo;</a>
+    {% else %}
+      <span class="next ">next</span>
+    {% endif %}
+  </div>
+
 </section>
